# rust-rocket-sqlx

./: .gitignore  Cargo.toml
src/: auth.rs  main.rs  user.rs
templates/: add-project.html.tera  add-task.html.tera  add-user.html.tera  base.html.tera  footer.html.tera  header.html.tera  index.html.tera  login.html.tera  macros.html.tera  msg.html.tera  profile.html.tera  project-edit.html.tera  project-id.html.tera  user-id.html.tera
